--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -31,3 +31,5 @@ jobs:
     # - run: npm install
     # - run: npm test
     # - run: npm build
+    #  yvideo_repo_token
+    #  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
