--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with: y-video-back-end
-      github_token: ${{ secrets.G_ACCESS_TOKEN }}
+      github_token: ${{ secrets.YVIDEO_ACCESS_TOKEN }}
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -33,3 +33,4 @@ jobs:
     # - run: npm build
     #  yvideo_repo_token
     #  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
+    # go to secrets to save this token for access
