--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -23,6 +23,7 @@ jobs:
     - uses: actions/checkout@v2
       with: y-video-back-end
       github_token: ${{ secrets.YVIDEO_ACCESS_TOKEN }}
+      workflow_file_name: clojure.yml
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
