--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -24,6 +24,7 @@ jobs:
       with: y-video-back-end
       github_token: ${{ secrets.YVIDEO_ACCESS_TOKEN }}
       workflow_file_name: clojure.yml
+      ref: development
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
