--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -20,19 +20,20 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: convictional/trigger-workflow-and-wait@v1.3.0
-      with: y-video-back-end
-        owner: youthrich40
-        github_user: youthrich40
-        github_token: ${{ secrets.YVIDEO_ACCESS_TOKEN }}
-        workflow_file_name: clojure.yml
-        ref: development
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - uses: convictional/trigger-workflow-and-wait@v1.3.0
+      with:
+        owner: youthrich40
+        repo: y-video-back-end
+        github_user: youthrich40
+        github_token: ${{ secrets.YVIDEO_ACCESS_TOKEN }}
+        workflow_file_name: clojure.yml
+        ref: development
     # - run: npm install
     # - run: npm test
     # - run: npm build
