--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -28,7 +28,7 @@ jobs:
     #     cache: 'npm'
     - uses: convictional/trigger-workflow-and-wait@v1.3.0
       with:
-        owner: youthrich40
+        owner: keithconvictional
         repo: y-video-back-end
         github_token: ${{ secrets.YVIDEO_ACCESS_TOKEN }}
         workflow_file_name: clojure.yml
