--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -8,6 +8,7 @@ on:
     branches: [ develop, build ]
   pull_request:
     branches: [ develop, build ]
+  repository_dispatch:
 
 jobs:
   build:
@@ -26,13 +27,20 @@ jobs:
     #   with:
     #     node-version: ${{ matrix.node-version }}
     #     cache: 'npm'
-    - uses: convictional/trigger-workflow-and-wait@v1.3.0
-      with:
-        owner: keithconvictional
-        repo: y-video-back-end
-        github_token: ${{ secrets.YVIDEO_ACCESS_TOKEN }}
-        workflow_file_name: clojure.yml
-        ref: development
+
+    run: |
+          curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -u ${{ secrets.ACCESS_TOKEN }} \
+          --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+
+    # - uses: convictional/trigger-workflow-and-wait@v1.3.0
+    #   with:
+    #     owner: youthrich40
+    #     repo: y-video-back-end
+    #     github_token: ${{ secrets.YVIDEO_ACCESS_TOKEN }}
+    #     workflow_file_name: clojure.yml
+    #     ref: development
     # - run: npm install
     # - run: npm test
     # - run: npm build
