--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -15,17 +15,25 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    steps:
+      - name: PING - Dispatch initiating repository event
+        if: github.event.action != 'pong'
+        run: |
+          curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -u ${{ secrets.ACCESS_TOKEN }} \
+          --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+
     strategy:
       matrix:
         node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    steps:
-      run: |
-        curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
-        -H 'Accept: application/vnd.github.everest-preview+json' \
-        -u ${{ secrets.ACCESS_TOKEN }} \
-        --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+    # steps:
+    #   run: |
+    #     curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
+    #     -H 'Accept: application/vnd.github.everest-preview+json' \
+    #     -u ${{ secrets.ACCESS_TOKEN }} \
+    #     --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
     # - uses: actions/checkout@v2
     # - name: Use Node.js ${{ matrix.node-version }}
     #   uses: actions/setup-node@v2
