--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -21,8 +21,7 @@ jobs:
         run: |
           curl -X POST https://api.github.com/repos/youthrich40/serokoreanlanguage/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.ACCESS_TOKEN }} \
-          --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+          -u ${{ secrets.ACCESS_TOKEN }}
 
     strategy:
       matrix:
