--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -19,9 +19,10 @@ jobs:
       - name: PING - Dispatch initiating repository event
         if: github.event.action != 'pong'
         run: |
-          curl -X POST https://api.github.com/repos/youthrich40/serokoreanlanguage/dispatches \
+          curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.ACCESS_TOKEN }}
+          -u ${{ secrets.ACCESS_TOKEN }} \
+          --data '{"event_type": "ping"}'
 
     strategy:
       matrix:
