--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
           curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.ACCESS_TOKEN }} \
-          --data '{"event_type": "ping"}'
+          -u ${{ secrets.YVIDEO_ACCESS_TOKEN }} \
+          --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
 
     strategy:
       matrix:
