--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -18,18 +18,12 @@ jobs:
     steps:
       - name: PING - Dispatch initiating repository event
         if: github.event.action != 'pong'
-        run: |
-          curl \
-            -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
-            -d '{"event_type":"ping"}'
 
-        # run: |
-        #   curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
-        #   -H 'Accept: application/vnd.github.everest-preview+json' \
-        #   -u ${{ secrets.YVIDEO_ACCESS_TOKEN }} \
-        #   --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+        run: |
+          curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -u ${{ secrets.YVIDEO_ACCESS_TOKEN }} \
+          --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
 
     strategy:
       matrix:
