--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: PING - Dispatch initiating repository event
+      - name: Dispatch initiating repository event
         run: |
           curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
@@ -27,12 +27,6 @@ jobs:
       matrix:
         node-version: [14.x]
 
-    # steps:
-    #   run: |
-    #     curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
-    #     -H 'Accept: application/vnd.github.everest-preview+json' \
-    #     -u ${{ secrets.ACCESS_TOKEN }} \
-    #     --data '{"event_type": "ping", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
     # - uses: actions/checkout@v2
     # - name: Use Node.js ${{ matrix.node-version }}
     #   uses: actions/setup-node@v2
@@ -40,13 +34,6 @@ jobs:
     #     node-version: ${{ matrix.node-version }}
     #     cache: 'npm'
 
-    # - uses: convictional/trigger-workflow-and-wait@v1.3.0
-    #   with:
-    #     owner: youthrich40
-    #     repo: y-video-back-end
-    #     github_token: ${{ secrets.YVIDEO_ACCESS_TOKEN }}
-    #     workflow_file_name: clojure.yml
-    #     ref: development
     # - run: npm install
     # - run: npm test
     # - run: npm build
