--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -27,12 +27,12 @@ jobs:
       matrix:
         node-version: [14.x]
 
-    # - uses: actions/checkout@v2
-    # - name: Use Node.js ${{ matrix.node-version }}
-    #   uses: actions/setup-node@v2
-    #   with:
-    #     node-version: ${{ matrix.node-version }}
-    #     cache: 'npm'
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
 
     # - run: npm install
     # - run: npm test
