--- a/.github/workflows/yvideo_frontend_integration.yml
+++ b/.github/workflows/yvideo_frontend_integration.yml
@@ -20,22 +20,18 @@ jobs:
         node-version: [14.x]
 
     steps:
-      - name: Dispatch initiating repository event
-        run: |
-          curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.YVIDEO_ACCESS_TOKEN }} \
-          --data '{"event_type": "yvideo-frontend", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-
-    # - run: npm install
-    # - run: npm test
-    # - run: npm build
-    #  yvideo_repo_token
-    #  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
-    # go to secrets to save this token for access
+        run: npm install
+        run: npm test
+        run: npm build
+      - name: Dispatch initiating repository event
+        run: |
+          curl -X POST https://api.github.com/repos/youthrich40/y-video-back-end/dispatches \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -u ${{ secrets.YVIDEO_ACCESS_TOKEN }} \
+          --data '{"event_type": "yvideo-frontend", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
